--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -12524,7 +12524,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "TBitmap", 220, "TBitmap", 0x00000000, 544, 15, 59, 47
 }
 
-LFACCLI_1 DIALOG DISCARDABLE 150, 93, 537, 273
+LFACCLI_1 DIALOG DISCARDABLE 150, 93, 536, 273
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
@@ -12538,6 +12538,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 272, "Edit", NOT WS_VISIBLE|WS_BORDER, 123, 42, 410, 11
   CONTROL "", 280, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 55, 55, 65, 11
   CONTROL "", 282, "Edit", NOT WS_VISIBLE|WS_BORDER, 123, 55, 410, 11
+  CONTROL "", 256, "Edit", NOT WS_VISIBLE|ES_RIGHT|WS_BORDER|WS_TABSTOP, 55, 95, 65, 11
   CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 108, 65, 11
   CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 121, 65, 11
   CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 135, 65, 11
@@ -12552,60 +12553,61 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 220, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 258, 65, 11
   CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 218, 108, 70, 11
   CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 218, 121, 70, 11
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 396, 121, 60, 11
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 218, 135, 70, 11
-  CONTROL "", 201, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 396, 135, 60, 11
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 218, 148, 70, 11
-  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 290, 148, 166, 11
-  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 218, 161, 70, 11
-  CONTROL "", 206, "Edit", WS_BORDER|WS_TABSTOP, 290, 161, 166, 11
-  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 218, 174, 70, 11
-  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 290, 174, 166, 11
-  CONTROL "", 295, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 396, 200, 60, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 218, 187, 50, 11
-  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 270, 187, 18, 11
-  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 218, 200, 50, 11
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 270, 200, 18, 11
-  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 218, 213, 238, 11
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 218, 135, 70, 11
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 218, 148, 70, 11
+  CONTROL "", 201, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 402, 148, 60, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 218, 161, 70, 11
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 290, 161, 172, 11
+  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 218, 174, 70, 11
+  CONTROL "", 206, "Edit", WS_BORDER|WS_TABSTOP, 290, 174, 172, 11
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 218, 187, 70, 11
+  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 290, 187, 172, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 218, 200, 50, 11
+  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 270, 200, 18, 11
+  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 218, 213, 50, 11
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 270, 213, 18, 11
   CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 218, 226, 70, 11
-  CONTROL "", 320, "Edit", ES_RIGHT|WS_BORDER, 218, 258, 70, 11
-  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 290, 226, 166, 11
   CONTROL "", 310, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 218, 239, 70, 11
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_BORDER, 218, 258, 70, 11
   CONTROL "Gastos suplidos", 440, "Button", NOT WS_VISIBLE|BS_AUTOCHECKBOX|WS_TABSTOP, 304, 109, 63, 10
+  CONTROL "", 295, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 402, 200, 60, 11
+  CONTROL "", 460, "Edit", ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 341, 213, 121, 11
+  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 290, 226, 172, 11
   CONTROL "", 156, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 31, 200, 23, 11
   CONTROL "Precio ", -1, "Static", WS_GROUP, 4, 203, 25, 8
   CONTROL "Cajas ", 131, "Static", WS_GROUP, 4, 138, 48, 8
   CONTROL "Importe", -1, "Static", WS_GROUP, 4, 261, 34, 8
   CONTROL "Descuento ", -1, "Static", WS_GROUP, 136, 124, 42, 8
   CONTROL "Unidades", 141, "Static", WS_GROUP, 4, 151, 43, 8
-  CONTROL "Artículo", -1, "Static", WS_GROUP, 4, 5, 36, 8
+  CONTROL "Artículo", -1, "Static", WS_GROUP, 4, 5, 30, 8
   CONTROL "Impuestos", -1, "Static", WS_GROUP, 4, 111, 36, 8
-  CONTROL "Descuento promoción ", -1, "Static", WS_GROUP, 304, 123, 77, 8
-  CONTROL "Comisión agente ", -1, "Static", WS_GROUP, 136, 138, 59, 8
+  CONTROL "Descuento promoción ", -1, "Static", WS_GROUP, 136, 137, 77, 8
+  CONTROL "Comisión agente ", -1, "Static", WS_GROUP, 136, 151, 59, 8
   CONTROL "Punto verde", 152, "Static", WS_GROUP, 4, 229, 47, 8
-  CONTROL "Propiedad 2", 281, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 57, 51, 8
-  CONTROL "Propiedad 1", 271, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 44, 51, 8
+  CONTROL "Propiedad 2", 281, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 57, 43, 8
+  CONTROL "Propiedad 1", 271, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 44, 43, 8
   CONTROL "Dto. lineal", 261, "Static", WS_GROUP, 4, 242, 37, 8
-  CONTROL "Peso", -1, "Static", WS_GROUP, 136, 190, 19, 8
-  CONTROL "Tipo movimiento", 292, "Static", WS_GROUP, 136, 177, 57, 8
+  CONTROL "Peso", -1, "Static", WS_GROUP, 136, 203, 19, 8
+  CONTROL "Tipo movimiento", 292, "Static", WS_GROUP, 136, 190, 57, 8
   CONTROL "Almacén", -1, "Static", WS_GROUP, 136, 229, 45, 8
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 4, 254, 530, 1
   CONTROL "Impuestos especiales", 126, "Static", WS_GROUP, 136, 111, 73, 8
   CONTROL "Costo", 321, "Static", WS_GROUP, 136, 261, 23, 8
-  CONTROL "Nº lote", 113, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 18, 50, 8
-  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 136, 164, 45, 8
+  CONTROL "Nº lote", 113, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 18, 27, 8
+  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 136, 177, 45, 8
   CONTROL "Portes", 351, "Static", WS_GROUP, 4, 216, 42, 8
-  CONTROL "Volumen", -1, "Static", WS_GROUP, 136, 203, 31, 8
+  CONTROL "Volumen", -1, "Static", WS_GROUP, 136, 216, 31, 8
   CONTROL "", 521, "Static", WS_GROUP, 4, 164, 42, 8
   CONTROL "", 541, "Static", WS_GROUP, 4, 190, 47, 8
   CONTROL "", 531, "Static", WS_GROUP, 4, 177, 42, 8
-  CONTROL "Unidad medición", -1, "Static", WS_GROUP, 136, 151, 58, 8
-  CONTROL "Importe comisión ", -1, "Static", WS_GROUP, 304, 138, 60, 8
+  CONTROL "Unidad medición", -1, "Static", WS_GROUP, 136, 164, 58, 8
+  CONTROL "Importe comisión ", -1, "Static", WS_GROUP, 304, 151, 60, 8
   CONTROL "Caducidad", 341, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 32, 41, 8
-  CONTROL "Factor", -1, "Static", WS_GROUP, 306, 203, 35, 8
+  CONTROL "Factor", -1, "Static", WS_GROUP, 304, 203, 35, 8
   CONTROL "Bultos", 451, "Static", WS_GROUP, 4, 124, 48, 8
-  CONTROL "Formato", -1, "Static", WS_GROUP, 136, 216, 35, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 304, 215, 35, 8
   CONTROL "Stock", -1, "Static", WS_GROUP, 136, 242, 45, 8
+  CONTROL "Contador", 257, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 98, 36, 8
 }
 
 LFACCLI_2 DIALOG DISCARDABLE 150, 93, 359, 220
@@ -12687,14 +12689,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "Und. medición", -1, "Static", WS_GROUP, 142, 100, 47, 8
 }
 
-LFACCLI_3 DIALOG DISCARDABLE 135, 103, 536, 218
+LFACCLI_3 DIALOG DISCARDABLE 135, 103, 536, 273
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 110, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 59, 3, 475, 105
-  CONTROL "", 100, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 59, 111, 475, 105
-  CONTROL "Observaciones", -1, "Static", WS_GROUP, 4, 111, 53, 8
-  CONTROL "Descipción larga", -1, "Static", WS_GROUP, 4, 3, 53, 8
+  CONTROL "", 110, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 63, 3, 471, 130
+  CONTROL "", 100, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 63, 136, 471, 130
+  CONTROL "Observaciones", -1, "Static", WS_GROUP, 4, 136, 53, 8
+  CONTROL "Descipción larga", -1, "Static", WS_GROUP, 4, 3, 58, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH
@@ -15390,6 +15392,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 125, 30, 36, 11
   CONTROL "", 105, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 162, 30, 18, 11
   CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 42, 80, 11
+  CONTROL "", 111, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 54, 80, 11
+  CONTROL "", 113, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 66, 80, 11
   CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 100, 78, 80, 11
   CONTROL "", 125, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 100, 90, 80, 11
   CONTROL "", 218, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 100, 114, 80, 186
@@ -15428,9 +15432,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "0", 402, "Static", SS_RIGHT|WS_GROUP, 582, 309, 80, 8
   CONTROL "0", 404, "Static", SS_RIGHT|WS_GROUP, 582, 327, 80, 8
   CONTROL "", 408, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 91, 353, 101, 11
-  CONTROL "", 111, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 54, 80, 11
   CONTROL "Incio servicio", 112, "Static", WS_GROUP, 45, 57, 51, 8
-  CONTROL "", 113, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 66, 80, 11
   CONTROL "Fin servicio", 114, "Static", WS_GROUP, 45, 69, 51, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Pedidos de clientes", -1, "Static", WS_GROUP, 45, 3, 120, 8
@@ -19997,20 +19999,20 @@ FONT 8, "MS Sans Serif"
   CONTROL "Ubicación", -1, "Static", WS_GROUP, 5, 68, 73, 8
 }
 
-LSATCLI_1 DIALOG DISCARDABLE 150, 93, 361, 271
+LSATCLI_1 DIALOG DISCARDABLE 150, 93, 536, 271
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 55, 3, 65, 11
-  CONTROL "", 111, "Edit", NOT WS_VISIBLE|ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 123, 3, 234, 63
-  CONTROL "", 500, "TXBrowse", NOT WS_VISIBLE|WS_TABSTOP|0x00300000, 4, 16, 353, 90
-  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 123, 3, 234, 11
+  CONTROL "", 111, "Edit", NOT WS_VISIBLE|ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 123, 3, 410, 63
+  CONTROL "", 500, "TXBrowse", NOT WS_VISIBLE|WS_TABSTOP|0x00300000, 4, 17, 529, 90
+  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 123, 3, 410, 11
   CONTROL "", 112, "Edit", NOT WS_VISIBLE|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 55, 16, 65, 11
   CONTROL "", 340, "Edit", NOT WS_VISIBLE|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 29, 65, 11
   CONTROL "", 270, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 55, 42, 65, 11
-  CONTROL "", 272, "Edit", NOT WS_VISIBLE|WS_BORDER, 123, 42, 234, 11
+  CONTROL "", 272, "Edit", NOT WS_VISIBLE|WS_BORDER, 123, 42, 410, 11
   CONTROL "", 280, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 55, 55, 65, 11
-  CONTROL "", 282, "Edit", NOT WS_VISIBLE|WS_BORDER, 123, 55, 234, 11
+  CONTROL "", 282, "Edit", NOT WS_VISIBLE|WS_BORDER, 123, 55, 410, 11
   CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 121, 65, 11
   CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 135, 65, 11
   CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 148, 65, 11
@@ -20021,64 +20023,64 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 213, 65, 11
   CONTROL "", 350, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 226, 65, 11
   CONTROL "", 151, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 239, 65, 11
-  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 121, 70, 11
+  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 218, 121, 70, 11
   CONTROL "", 220, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 258, 65, 11
-  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 108, 70, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 135, 70, 11
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 303, 135, 54, 11
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 148, 70, 11
-  CONTROL "", 201, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 303, 148, 54, 11
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 178, 161, 70, 11
-  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 249, 161, 108, 11
-  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 178, 174, 70, 11
-  CONTROL "", 206, "Edit", WS_BORDER|WS_TABSTOP, 249, 174, 108, 11
-  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 178, 187, 70, 11
-  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 249, 187, 108, 11
-  CONTROL "", 295, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 200, 70, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 213, 51, 11
-  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 230, 213, 18, 11
-  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 287, 213, 50, 11
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 338, 213, 19, 11
-  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 178, 226, 179, 11
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 178, 239, 70, 11
-  CONTROL "", 320, "Edit", ES_RIGHT|WS_BORDER, 178, 258, 70, 11
-  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 249, 239, 108, 11
-  CONTROL "", 310, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 287, 257, 70, 11
-  CONTROL "Gastos suplidos", 440, "Button", NOT WS_VISIBLE|BS_AUTOCHECKBOX|WS_TABSTOP, 250, 109, 63, 10
+  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 218, 108, 70, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 218, 135, 70, 11
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 357, 135, 54, 11
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 218, 148, 70, 11
+  CONTROL "", 201, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 357, 148, 54, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 218, 161, 70, 11
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 303, 161, 108, 11
+  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 218, 174, 70, 11
+  CONTROL "", 206, "Edit", WS_BORDER|WS_TABSTOP, 303, 174, 108, 11
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 218, 187, 70, 11
+  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 303, 187, 108, 11
+  CONTROL "", 295, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 218, 200, 70, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 218, 213, 51, 11
+  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 270, 213, 18, 11
+  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 341, 213, 50, 11
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 392, 213, 19, 11
+  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 232, 226, 179, 11
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 218, 239, 70, 11
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_BORDER, 218, 258, 70, 11
+  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 303, 239, 108, 11
+  CONTROL "", 310, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 341, 257, 70, 11
+  CONTROL "Gastos suplidos", 440, "Button", NOT WS_VISIBLE|BS_AUTOCHECKBOX|WS_TABSTOP, 304, 109, 63, 10
   CONTROL "", 156, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 31, 213, 23, 11
   CONTROL "Precio ", -1, "Static", WS_GROUP, 4, 216, 25, 8
   CONTROL "Cajas ", 131, "Static", WS_GROUP, 4, 151, 48, 8
   CONTROL "Importe", -1, "Static", WS_GROUP, 4, 261, 34, 8
-  CONTROL "Descuento ", -1, "Static", WS_GROUP, 123, 138, 42, 8
+  CONTROL "Descuento ", -1, "Static", WS_GROUP, 136, 138, 42, 8
   CONTROL "Unidades", 141, "Static", WS_GROUP, 4, 164, 43, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 4, 6, 36, 8
   CONTROL "Impuestos", -1, "Static", WS_GROUP, 4, 124, 36, 8
-  CONTROL "Dto. promoción ", -1, "Static", WS_GROUP, 250, 138, 49, 8
-  CONTROL "Com. agente ", -1, "Static", WS_GROUP, 123, 151, 47, 8
+  CONTROL "Dto. promoción ", -1, "Static", WS_GROUP, 304, 138, 49, 8
+  CONTROL "Com. agente ", -1, "Static", WS_GROUP, 136, 151, 47, 8
   CONTROL "Punto verde", 152, "Static", WS_GROUP, 4, 242, 47, 8
   CONTROL "Propiedad 2", 281, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 57, 51, 8
   CONTROL "Propiedad 1", 271, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 44, 51, 8
-  CONTROL "Dto. lineal", 261, "Static", WS_GROUP, 123, 124, 37, 8
-  CONTROL "Peso", -1, "Static", WS_GROUP, 123, 216, 19, 8
-  CONTROL "Tipo mov.", 292, "Static", WS_GROUP, 123, 190, 37, 8
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 123, 242, 45, 8
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 3, 254, 354, 1
-  CONTROL "Imp. esp.", 126, "Static", WS_GROUP, 123, 111, 34, 8
-  CONTROL "Costo", 321, "Static", WS_GROUP, 123, 261, 23, 8
+  CONTROL "Dto. lineal", 261, "Static", WS_GROUP, 136, 124, 37, 8
+  CONTROL "Peso", -1, "Static", WS_GROUP, 136, 216, 19, 8
+  CONTROL "Tipo mov.", 292, "Static", WS_GROUP, 136, 190, 37, 8
+  CONTROL "Almacén", -1, "Static", WS_GROUP, 136, 242, 45, 8
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 57, 254, 354, 1
+  CONTROL "Imp. esp.", 126, "Static", WS_GROUP, 136, 111, 34, 8
+  CONTROL "Costo", 321, "Static", WS_GROUP, 136, 261, 23, 8
   CONTROL "Nº lote", 113, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 19, 50, 8
-  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 123, 177, 45, 8
+  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 136, 177, 45, 8
   CONTROL "Portes", 351, "Static", WS_GROUP, 4, 229, 42, 8
-  CONTROL "Volumen", -1, "Static", WS_GROUP, 250, 216, 31, 8
+  CONTROL "Volumen", -1, "Static", WS_GROUP, 304, 216, 31, 8
   CONTROL "", 521, "Static", WS_GROUP, 4, 177, 42, 8
   CONTROL "", 541, "Static", WS_GROUP, 4, 203, 47, 8
   CONTROL "", 531, "Static", WS_GROUP, 4, 190, 42, 8
-  CONTROL "Und. medición", -1, "Static", WS_GROUP, 123, 164, 47, 8
-  CONTROL "Comisión ", -1, "Static", WS_GROUP, 250, 151, 35, 8
+  CONTROL "Und. medición", -1, "Static", WS_GROUP, 136, 164, 47, 8
+  CONTROL "Comisión ", -1, "Static", WS_GROUP, 304, 151, 35, 8
   CONTROL "Caducidad", 341, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 32, 41, 8
-  CONTROL "Factor", -1, "Static", WS_GROUP, 123, 203, 35, 8
+  CONTROL "Factor", -1, "Static", WS_GROUP, 136, 203, 35, 8
   CONTROL "Bultos", 451, "Static", WS_GROUP, 4, 138, 48, 8
-  CONTROL "Formato", -1, "Static", WS_GROUP, 123, 229, 35, 8
-  CONTROL "Stock", -1, "Static", WS_GROUP, 250, 260, 22, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 136, 229, 35, 8
+  CONTROL "Stock", -1, "Static", WS_GROUP, 304, 260, 22, 8
   CONTROL "", 256, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 55, 108, 65, 11
   CONTROL "Contador", 257, "Static", WS_GROUP, 4, 111, 36, 8
 }
