--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -14185,66 +14185,70 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 156, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 31, 149, 23, 12
 }
 
-LPRODUCIDO DIALOG DISCARDABLE 144, 103, 386, 213
+LPRODUCIDO DIALOG DISCARDABLE 144, 103, 386, 227
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Materia primas"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 400, "SysTabControl32", WS_TABSTOP, 3, 2, 382, 175
-  CONTROL "&Series [F6]", 3, "Button", WS_TABSTOP, 2, 180, 50, 14
-  CONTROL "A&nterior [F7]", 4, "Button", 0x00000000, 56, 180, 50, 14
-  CONTROL "&Siguiente [F8]", 5, "Button", 0x00000000, 112, 180, 50, 14
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 279, 180, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 334, 180, 50, 14
+  CONTROL "", 400, "SysTabControl32", WS_TABSTOP, 3, 2, 382, 189
+  CONTROL "&Series [F6]", 3, "Button", WS_TABSTOP, 2, 194, 50, 14
+  CONTROL "A&nterior [F7]", 4, "Button", 0x00000000, 56, 194, 50, 14
+  CONTROL "&Siguiente [F8]", 5, "Button", 0x00000000, 112, 194, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 279, 194, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 334, 194, 50, 14
 }
 
-LPRODUCIDO_1 DIALOG DISCARDABLE 144, 103, 380, 157
+LPRODUCIDO_1 DIALOG DISCARDABLE 144, 103, 380, 171
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 74, 11, 68, 11
   CONTROL "", 111, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 144, 11, 227, 11
-  CONTROL "", 210, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 74, 24, 68, 11
-  CONTROL "", 320, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 38, 68, 11
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 74, 51, 68, 11
-  CONTROL "", 222, "Edit", WS_BORDER, 144, 51, 227, 11
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 74, 65, 68, 11
-  CONTROL "", 232, "Edit", WS_BORDER, 144, 65, 227, 11
-  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 78, 68, 11
-  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 91, 68, 11
-  CONTROL "", 140, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 74, 104, 68, 11
-  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 117, 68, 11
-  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 91, 49, 11
-  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 242, 91, 20, 11
-  CONTROL "", 172, "Edit", ES_RIGHT|WS_BORDER, 318, 91, 53, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 104, 49, 11
-  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 242, 104, 20, 11
-  CONTROL "", 182, "Edit", ES_RIGHT|WS_BORDER, 318, 104, 53, 11
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 192, 117, 70, 11
-  CONTROL "", 191, "Edit", WS_BORDER, 263, 117, 108, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER, 74, 137, 68, 11
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_BORDER, 192, 137, 75, 11
-  CONTROL "Producto", -1, "Button", BS_GROUPBOX, 2, 2, 374, 151
-  CONTROL "Cajas ", 121, "Static", WS_GROUP, 8, 81, 23, 8
-  CONTROL "Total unidades", -1, "Static", WS_GROUP, 8, 107, 50, 8
-  CONTROL "Unidades", -1, "Static", WS_GROUP, 8, 93, 34, 8
+  CONTROL "", 210, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 74, 25, 68, 11
+  CONTROL "", 320, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 39, 68, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 74, 53, 68, 11
+  CONTROL "", 222, "Edit", WS_BORDER, 144, 53, 227, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 74, 67, 68, 11
+  CONTROL "", 232, "Edit", WS_BORDER, 144, 67, 227, 11
+  CONTROL "", 330, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 81, 68, 11
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 95, 68, 11
+  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 109, 68, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 74, 123, 68, 11
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 137, 68, 11
+  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 95, 49, 11
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 242, 95, 20, 11
+  CONTROL "", 172, "Edit", ES_RIGHT|WS_BORDER, 318, 95, 53, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 109, 49, 11
+  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 242, 109, 20, 11
+  CONTROL "", 182, "Edit", ES_RIGHT|WS_BORDER, 318, 109, 53, 11
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 192, 123, 70, 11
+  CONTROL "", 191, "Edit", WS_BORDER, 263, 123, 108, 11
+  CONTROL "", 340, "Edit", WS_BORDER, 192, 137, 179, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER, 74, 153, 68, 11
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_BORDER, 193, 153, 75, 11
+  CONTROL "Producto", -1, "Button", BS_GROUPBOX, 3, 1, 374, 165
+  CONTROL "Cajas ", 121, "Static", WS_GROUP, 8, 98, 23, 8
+  CONTROL "Total unidades", -1, "Static", WS_GROUP, 8, 126, 50, 8
+  CONTROL "Unidades", -1, "Static", WS_GROUP, 8, 112, 34, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 8, 14, 27, 8
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 7, 133, 365, 1
-  CONTROL "Stock actual", -1, "Static", WS_GROUP, 146, 140, 44, 8
-  CONTROL "Precio", -1, "Static", WS_GROUP, 8, 120, 23, 8
-  CONTROL "Importe", -1, "Static", WS_GROUP, 8, 140, 26, 8
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 146, 120, 31, 8
-  CONTROL "Peso", -1, "Static", WS_GROUP, 146, 95, 20, 8
-  CONTROL "Volumen", -1, "Static", WS_GROUP, 146, 108, 30, 8
-  CONTROL "Tot. peso", -1, "Static", WS_GROUP, 269, 95, 37, 8
-  CONTROL "Tot. volumen", -1, "Static", WS_GROUP, 269, 108, 42, 8
-  CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 8, 68, 51, 8
-  CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 8, 54, 51, 8
-  CONTROL "Nº lote", 211, "Static", WS_GROUP, 8, 27, 25, 8
-  CONTROL "Caducidad", 321, "Static", WS_GROUP, 8, 41, 51, 8
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 7, 150, 365, 1
+  CONTROL "Stock actual", -1, "Static", WS_GROUP, 147, 156, 44, 8
+  CONTROL "Precio", -1, "Static", WS_GROUP, 8, 140, 23, 8
+  CONTROL "Importe", -1, "Static", WS_GROUP, 9, 156, 26, 8
+  CONTROL "Almacén", -1, "Static", WS_GROUP, 146, 126, 31, 8
+  CONTROL "Peso", -1, "Static", WS_GROUP, 146, 98, 20, 8
+  CONTROL "Volumen", -1, "Static", WS_GROUP, 146, 112, 30, 8
+  CONTROL "Tot. peso", -1, "Static", WS_GROUP, 269, 98, 37, 8
+  CONTROL "Tot. volumen", -1, "Static", WS_GROUP, 269, 112, 42, 8
+  CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 8, 70, 51, 8
+  CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 8, 56, 51, 8
+  CONTROL "Nº lote", 211, "Static", WS_GROUP, 8, 28, 25, 8
+  CONTROL "Caducidad", 321, "Static", WS_GROUP, 8, 42, 51, 8
+  CONTROL "Bultos", 331, "Static", WS_GROUP, 8, 84, 23, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 145, 140, 31, 8
 }
 
-LPRODUCIDO_2 DIALOG DISCARDABLE 144, 103, 378, 149
+LPRODUCIDO_2 DIALOG DISCARDABLE 144, 103, 378, 163
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
