--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -17068,7 +17068,7 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
 
-REMCLI DIALOG DISCARDABLE 43, -347, 620, 362
+REMCLI DIALOG DISCARDABLE 43, -347, 620, 379
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Remesas de recibos a clientes"
 FONT 8, "MS Sans Serif"
@@ -17076,35 +17076,39 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 100, 39, 57, 12
   CONTROL "", 110, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 159, 39, 26, 12
   CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 52, 85, 12
-  CONTROL "Exportado", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 51, 67, 45, 10
-  CONTROL "", 201, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 65, 85, 12
+  CONTROL "", 125, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 65, 85, 12
+  CONTROL "Exportado", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 51, 81, 45, 10
+  CONTROL "", 201, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 79, 85, 12
   CONTROL "Pago [Norma 19]", 160, "Button", BS_AUTORADIOBUTTON, 199, 42, 66, 10
   CONTROL "Descuento [Norma 58]", 161, "Button", BS_AUTORADIOBUTTON, 199, 56, 85, 10
   CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 345, 39, 66, 12
   CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 413, 39, 194, 12
   CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 345, 52, 66, 12
-  CONTROL "", 142, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 557, 52, 50, 12
+  CONTROL "", 142, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 546, 52, 61, 12
   CONTROL "", 170, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 345, 65, 66, 12
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 49, 96, 50, 14
-  CONTROL "Modificar [F3]", 501, "Button", WS_TABSTOP, 102, 96, 50, 14
-  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 156, 96, 50, 14
-  CONTROL "&Importar", 503, "Button", WS_TABSTOP, 210, 96, 50, 14
-  CONTROL "", 150, "TXBrowse", WS_TABSTOP|0x00300000, 50, 112, 557, 210
-  CONTROL "&Aceptar [F5]", 511, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 502, 331, 50, 14
-  CONTROL "&Cancelar", 510, "Button", WS_TABSTOP, 557, 331, 50, 14
-  CONTROL "TBitmap", 141, "TBitMap", 0x00800000, 412, 52, 16, 11
-  CONTROL "Recibos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 83, 570, 244
+  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 345, 78, 261, 12
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 49, 110, 50, 14
+  CONTROL "Modificar [F3]", 501, "Button", WS_TABSTOP, 102, 110, 50, 14
+  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 156, 110, 50, 14
+  CONTROL "&Importar", 503, "Button", WS_TABSTOP, 210, 110, 50, 14
+  CONTROL "", 150, "TXBrowse", WS_TABSTOP|0x00300000, 50, 126, 557, 210
+  CONTROL "&Aceptar [F5]", 511, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 502, 345, 50, 14
+  CONTROL "&Cancelar", 510, "Button", WS_TABSTOP, 557, 345, 50, 14
+  CONTROL "TBitmap", 141, "TBitmap", 0x00800000, 412, 52, 16, 11
+  CONTROL "Recibos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 97, 570, 244
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 295, 42, 44, 8
   CONTROL "Número", -1, "Static", WS_GROUP, 51, 42, 34, 8
   CONTROL "Fecha", -1, "Static", WS_GROUP, 51, 55, 24, 8
   CONTROL "Cambio divisa", -1, "Static", WS_GROUP, 492, 55, 45, 8
   CONTROL "Divisa", -1, "Static", WS_GROUP, 295, 55, 44, 8
   CONTROL "Contabilizado", -1, "Static", WS_GROUP, 295, 68, 47, 8
-  CONTROL "Remesa", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 30, 146, 50
-  CONTROL "Tipo", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 192, 30, 94, 50
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 288, 30, 326, 50
+  CONTROL "Remesa", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 30, 146, 65
+  CONTROL "Tipo", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 192, 30, 94, 65
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 288, 30, 326, 65
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Remesas bancarias", -1, "Static", WS_GROUP, 44, 3, 120, 8
+  CONTROL "Ingreso", -1, "Static", WS_GROUP, 51, 68, 24, 8
+  CONTROL "Comentario", -1, "Static", WS_GROUP, 295, 81, 44, 8
 }
 
 REMMOV DIALOG DISCARDABLE 44, -364, 666, 375
